syntax = "proto3";

option go_package = "github.com/hyperxpizza/users-service/pkg/grpc";

import "google/protobuf/timestamp.proto";

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginData {
    int64 id = 1;
    string username = 2;
    string email = 3;
    string passwordHash = 4;
    google.protobuf.Timestamp created = 5;
    google.protobuf.Timestamp updated = 6;
    int64 userID = 7;
}

service UsersService {
   rpc GetLoginData(LoginRequest) returns (LoginData) {};
}